--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
       </p>
       <footer>posted by Chuck Wooden</footer>
     </article>
+    <form id="newComment" onSubmit="addComment()">
+
+      Add Comment: <input type="text" id = "commentText"><br>
+      Your Name: <input type="text" id = "commenterName"><br>
+      <input type="submit">
+    </form>
+    <div id="comments">
+
+    </div>
+    <script type="text/javascript" src="index.js">
+      
+    </script>
   </body>
 </html>
